@@ -1,3 +1,10 @@
+2007-12-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* Parser.pm: Support for |@namespace| rule.
+
+	* SelectorsSerializer.pm: Support for |lookup_namespace_prefix|
+	parameter is added.
+
 2007-12-23  Wakaba  <wakaba@suika.fam.cx>
 
 	* Parser.pm: Support for the |@charset| rule.
